test/files/neg/specification-scopes.check
P_2.scala:15: error: reference to x is ambiguous;
it is both defined in value <local Y> and imported subsequently by
import q.X._
        println(s"L15: $x")   // reference to `x' is ambiguous here
                        ^
P_2.scala:21: error: reference to y is ambiguous;
it is imported twice in the same scope by
import p.X._
and import X.y
          println(s"L21: $y") // reference to `y' is ambiguous here
                          ^
two errors found
